syntax = "proto3";

import "google/protobuf/empty.proto";


package quad;

service Quad {
    rpc AddPoint(AddPointRequest) returns (google.protobuf.Empty);
    rpc DeletePoint(DeletePointRequest) returns (google.protobuf.Empty);
    rpc FindWithinRange(FindWithinRangeRequest) returns (FindWithinRangeResponse);
    rpc GetAllQuads(google.protobuf.Empty) returns (GetAllQuadsResponse);
}

message AddPointRequest {
    Point point = 1;
}

message DeletePointRequest {
    Point point = 1;
}

message Point {
    int64 x = 1;
    int64 y = 2;
}

message Circle {
    int64 x = 1;
    int64 y = 2;
    int64 radius = 3;
}

message FindWithinRangeRequest {
    Circle circle = 1;
}

message FindWithinRangeResponse {
    repeated Point points = 1;
}

message GetAllQuadsResponse {
    QuadNode quadNode = 1;
}

message QuadNode {
    QuadNode topLeft = 1;
    QuadNode topRight = 2;
    QuadNode bottomLeft = 3;
    QuadNode bottomRight = 4;

    bool isChild = 5;
    
    repeated Point points = 6;
}
